--- a/debian/control
+++ b/debian/control
@@ -10,3 +10,8 @@ Architecture: amd64
 Depends: linux-image-3.16.0-5-amd64
 Description: kernel modules for platform devices such as fan, led, sfp
 
+
+Package: platform-modules-haliburton
+Architecture: amd64
+Depends: linux-image-3.16.0-5-amd64
+Description: kernel modules for platform devices such as fan, led, sfp
