--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@ export INSTALL_MOD_DIR:=extra
 KVERSION   ?= $(shell uname -r)
 KERNEL_SRC :=  /lib/modules/$(KVERSION)
 MOD_SRC_DIR:= $(shell pwd)
-MODULE_DIRS:= dx010
+MODULE_DIRS:= dx010 questone2 haliburton
 
 %:
 	dh $@
@@ -30,4 +30,3 @@ override_dh_clean:
 	(for mod in $(MODULE_DIRS); do \
 		make -C $(KERNEL_SRC)/build M=$(MOD_SRC_DIR)/$${mod}/modules clean; \
 	done)
-
