Introduce as5820 fan hwmon.

--- a/as5820/modules/Makefile
+++ b/as5820/modules/Makefile
@@ -1,2 +1,2 @@
 KBUILD_CFLAGS+=-DQUESTONE2
-obj-m := mc24lc64t.o questone2_baseboard_cpld.o questone2_switchboard.o dx030_fan.o
+obj-m := mc24lc64t.o questone2_baseboard_cpld.o questone2_switchboard.o as5820_fan.o
