--- a/debian/control
+++ b/debian/control
@@ -14,3 +14,8 @@ Package: platform-modules-questone2
 Architecture: amd64
 Depends: linux-image-3.16.0-5-amd64
 Description: kernel modules for platform devices such as fan, led, sfp
+
+Package: platform-modules-silverstone
+Architecture: amd64
+Depends: linux-image-3.16.0-5-amd64
+Description: kernel modules for platform devices such as fan, led, sfp
