--- a/debian/control
+++ b/debian/control
@@ -19,3 +19,13 @@ Package: platform-modules-silverstone
 Architecture: amd64
 Depends: linux-image-3.16.0-5-amd64
 Description: kernel modules for platform devices such as fan, led, sfp
+
+Package: platform-modules-fishbone48
+Architecture: amd64
+Depends: linux-image-3.16.0-5-amd64
+Description: kernel modules for platform devices such as fan, led, sfp
+
+Package: platform-modules-fishbone32
+Architecture: amd64
+Depends: linux-image-3.16.0-5-amd64
+Description: kernel modules for platform devices such as fan, led, sfp
